[project]
name = "semantic-search-openai-agents-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.31.0",
    "numpy>=2.2.6",
    "openai>=1.82.0",
    "openai-agents>=0.0.16",
    "pandas>=2.2.3",
    "pinecone>=7.0.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
]
